--- a/ZoomAndroid/project.properties
+++ b/ZoomAndroid/project.properties
@@ -16,4 +16,4 @@ target=android-23
 android.library.reference.1=..\\google-play-services_lib
 android.library.reference.2=..\\library-daimaija-slider
 android.library.reference.3=..\\library-jakewharton-indicator
-android.library.reference.4=..\\appcompat_v7
+android.library.reference.4=../appcompat_v7
