--- a/facebook/.classpath
+++ b/facebook/.classpath
@@ -4,8 +4,8 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="C:/Users/Andrija/AppData/Local/Android/sdk/extras/android/support/v4/android-support-v4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Andrija/Downloads/bolts-android-1.1.4.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/bolts-android-1.1.4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
