--- a/ZoomAndroid/AndroidManifest.xml
+++ b/ZoomAndroid/AndroidManifest.xml
@@ -4,7 +4,8 @@
     android:versionCode="9"
     android:versionName="1.8" >
 
-    <uses-sdk android:minSdkVersion="11"
+    <uses-sdk
+        android:minSdkVersion="11"
         android:targetSdkVersion="23" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,7 +14,7 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <!--
          The following two permissions are not required to use Google Maps Android 
-		API v2, but are recommended.
+		API v2, but are recommended.
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -27,7 +28,7 @@
         android:name="zoom.city.android.main.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="zoom.city.android.main.permission.MAPS_RECEIVE" /
+    <uses-permission android:name="zoom.city.android.main.permission.MAPS_RECEIVE" /
     -->
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
@@ -214,22 +215,30 @@
 
         <activity
             android:name=".PreviewFavouritesPage"
-            android:screenOrientation="portrait"
             android:label="@string/title_activity_preview_favourites_page"
+            android:screenOrientation="portrait"
             android:theme="@style/MyThemeNoActionBar" >
         </activity>
-        
-        <activity android:name="com.facebook.FacebookActivity"
-          android:configChanges=
-                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-          android:theme="@android:style/Theme.Translucent.NoTitleBar"
-          android:label="@string/app_name" />
-        
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
-        
-        <provider android:authorities="com.facebook.app.FacebookContentProvider1706893512890810"
-          android:name="com.facebook.FacebookContentProvider"
-          android:exported="true"/>
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
+        <provider
+            android:name="com.facebook.FacebookContentProvider"
+            android:authorities="com.facebook.app.FacebookContentProvider1706893512890810"
+            android:exported="true" />
+
+        <activity
+            android:name=".MyAdActivity"
+            android:label="@string/title_activity_my_ad"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
     </application>
 
 </manifest>
