--- a/ZoomAndroid/AndroidManifest.xml
+++ b/ZoomAndroid/AndroidManifest.xml
@@ -237,7 +237,7 @@
         <activity
             android:name=".MyAdActivity"
             android:label="@string/title_activity_my_ad"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
         </activity>
     </application>
 
